--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bangladeshi garments sourcuung company"
+      content="Bangladeshi garments sourcing company"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rainbow Tex</title>
+    <title>Rainbow Tex </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
