--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-messaging.js"></script> 
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script> -->
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+   
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    
   </body>
 </html>
